--- a/hfw/han/han_installer.html
+++ b/hfw/han/han_installer.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="test.js.js"></script>
+<script src="test.js"></script>
 <meta charset="UTF-8"> 
 <title>PS3Xploit Tools v3.0.4 - PS3 HAN Installer</title>
 <script>
