--- a/hfw/han/han_enabler.html
+++ b/hfw/han/han_enabler.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src="test.js"></script>
+<script src="ps3xploit_v304.js"></script>
 <meta charset="UTF-8"> 
 <title>PS3Xploit Tools v3.0.4 - PS3 HAN Enabler</title>
 <script>
