--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
 <body>
-<a href="https://meguminfanatic.github.iohfw/han/han_enabler.html">Han Enabler</a>
+<a href="https://meguminfanatic.github.io/hfw/han/han_enabler.html">Han Enabler</a>
 </body>
 </html/
