--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <html>
 <body>
-<a href="https://meguminfanatic.github.io/hfw/han/han_enabler.html">Han Enabler</a>
-<a href="https://meguminfanatic.github.io/hfw/han/han_installer.html">Han Installer</a>
+  <a href="https://meguminfanatic.github.io/hfw/han/han_enabler.html">Han Enabler</a><p> | </p><a href="https://meguminfanatic.github.io/hfw/han/han_installer.html">Han Installer</a>
 </body>
 </html/
