--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
 <body>
-  <a href="https://meguminfanatic.github.io/hfw/han/han_enabler.html">Han Enabler</a><p> | </p><a href="https://meguminfanatic.github.io/hfw/han/han_installer.html">Han Installer</a>
+  <a href="https://meguminfanatic.github.io/hfw/han/han_enabler.html">Han Enabler</a>
+  <p> | </p>
+  <a href="https://meguminfanatic.github.io/hfw/han/han_installer.html">Han Installer</a>
+  <p> | </p>
+  <a href="https://meguminfanatic.github.io/hfw/han/han_enabler_test.html">Han Enabler (TEST)</a>
 </body>
 </html/
