--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <p> | </p>
   <a href="https://meguminfanatic.github.io/hfw/han/han_installer.html">Han Installer</a>
   <p> | </p>
-  <a href="https://meguminfanatic.github.io/hfw/han/han_enabler_test.html">Han Enabler (TEST)</a>
+  <a href="https://meguminfanatic.github.io/hfw/han/han_enabler_test.html">Han Enabler TEST</a>
 </body>
 </html/
