--- a/index.html
+++ b/index.html
@@ -6,4 +6,4 @@
   <p> | </p>
   <a href="https://meguminfanatic.github.io/hfw/han/han_enabler_test.html">Han Enabler TEST</a>
 </body>
-</html/
+</html>
